@@ -106,6 +106,7 @@ enum _eHardwareTypes {
 	HTYPE_SOLARMAXTCP,			//49
 	HTYPE_KMTronic433,			//50
 	HTYPE_Pinger,				//51
+	HTYPE_NESTTHERMOSTAT,		//52
 	HTYPE_END
 };
 
