@@ -67,6 +67,7 @@
 #include "../hardware/KMTronic433.h"
 #include "../hardware/SolarMaxTCP.h"
 #include "../hardware/Pinger.h"
+#include "../hardware/NestThermostat.h"
 
 // load notifications configuration
 #include "../notifications/NotificationHelper.h"
@@ -665,6 +666,9 @@ bool MainWorker::AddHardwareFromParams(
 		break;
 	case HTYPE_TOONTHERMOSTAT:
 		pHardware = new CToonThermostat(ID, Username, Password);
+		break;
+	case HTYPE_NESTTHERMOSTAT:
+		pHardware = new CNestThermostat(ID, Username, Password);
 		break;
 	case HTYPE_Philips_Hue:
 		pHardware = new CPhilipsHue(ID, Address, Port, Username);
@@ -9889,8 +9893,9 @@ bool MainWorker::SetSetPointInt(const std::vector<std::string> &sd, const float 
 		(pHardware->HwdType==HTYPE_OpenThermGateway)||
 		(pHardware->HwdType==HTYPE_OpenThermGatewayTCP)||
 		(pHardware->HwdType == HTYPE_ICYTHERMOSTAT) ||
-		(pHardware->HwdType == HTYPE_TOONTHERMOSTAT)||
-		(pHardware->HwdType == HTYPE_EVOHOME_SCRIPT)||
+		(pHardware->HwdType == HTYPE_TOONTHERMOSTAT) ||
+		(pHardware->HwdType == HTYPE_NESTTHERMOSTAT) ||
+		(pHardware->HwdType == HTYPE_EVOHOME_SCRIPT) ||
 		(pHardware->HwdType == HTYPE_EVOHOME_SERIAL)
 		)
 	{
@@ -9912,6 +9917,11 @@ bool MainWorker::SetSetPointInt(const std::vector<std::string> &sd, const float 
 		else if (pHardware->HwdType == HTYPE_TOONTHERMOSTAT)
 		{
 			CToonThermostat *pGateway = (CToonThermostat*)pHardware;
+			pGateway->SetSetpoint(ID4, TempValue);
+		}
+		else if (pHardware->HwdType == HTYPE_NESTTHERMOSTAT)
+		{
+			CNestThermostat *pGateway = (CNestThermostat*)pHardware;
 			pGateway->SetSetpoint(ID4, TempValue);
 		}
 		else if (pHardware->HwdType == HTYPE_EVOHOME_SCRIPT || pHardware->HwdType == HTYPE_EVOHOME_SERIAL)
@@ -10136,6 +10146,12 @@ bool MainWorker::SetThermostatState(const std::string &idx, const int newState)
 	if (pHardware->HwdType == HTYPE_TOONTHERMOSTAT) 
 	{
 		CToonThermostat *pGateway = (CToonThermostat*)pHardware;
+		pGateway->SetProgramState(newState);
+		return true;
+	}
+	else if (pHardware->HwdType == HTYPE_NESTTHERMOSTAT)
+	{
+		CNestThermostat *pGateway = (CNestThermostat*)pHardware;
 		pGateway->SetProgramState(newState);
 		return true;
 	}
