@@ -326,7 +326,7 @@ define(['app'], function (app) {
 					 }     
 				});
 			}
-			else if ((text.indexOf("ICY") >= 0) || (text.indexOf("Toon") >= 0) || (text.indexOf("PVOutput") >= 0)) {
+			else if ((text.indexOf("ICY") >= 0) || (text.indexOf("Toon") >= 0) || (text.indexOf("Nest Th") >= 0) || (text.indexOf("PVOutput") >= 0)) {
 				var username = $("#hardwarecontent #divlogin #username").val();
 				var password = encodeURIComponent($("#hardwarecontent #divlogin #password").val());
 				$.ajax({
@@ -604,7 +604,7 @@ define(['app'], function (app) {
 					 }     
 				});
 			}
-			else if ((text.indexOf("ICY") >= 0)||(text.indexOf("Toon") >= 0)||(text.indexOf("PVOutput") >= 0))
+			else if ((text.indexOf("ICY") >= 0)||(text.indexOf("Toon") >= 0)||(text.indexOf("Nest Th") >= 0)||(text.indexOf("PVOutput") >= 0))
 			{
 				var username=$("#hardwarecontent #divlogin #username").val();
 				var password=encodeURIComponent($("#hardwarecontent #divlogin #password").val());
@@ -2353,7 +2353,7 @@ define(['app'], function (app) {
 							$("#hardwarecontent #hardwareparamsremote #tcpport").val(data["Port"]);
 							$("#hardwarecontent #hardwareparamsphilipshue #username").val(data["Username"]);
 						}
-						if ((data["Type"].indexOf("Domoticz") >= 0)||(data["Type"].indexOf("ICY") >= 0) ||(data["Type"].indexOf("Harmony") >= 0)||(data["Type"].indexOf("Toon") >= 0)||(data["Type"].indexOf("PVOutput") >= 0)||(data["Type"].indexOf("ETH8020") >= 0)||(data["Type"].indexOf("KMTronic") >= 0)) {
+						if ((data["Type"].indexOf("Domoticz") >= 0)||(data["Type"].indexOf("ICY") >= 0) ||(data["Type"].indexOf("Harmony") >= 0)||(data["Type"].indexOf("Toon") >= 0)||(data["Type"].indexOf("Nest Th") >= 0)||(data["Type"].indexOf("PVOutput") >= 0)||(data["Type"].indexOf("ETH8020") >= 0)||(data["Type"].indexOf("KMTronic") >= 0)) {
 							$("#hardwarecontent #hardwareparamslogin #username").val(data["Username"]);
 							$("#hardwarecontent #hardwareparamslogin #password").val(data["Password"]);
 						}
@@ -2458,7 +2458,7 @@ define(['app'], function (app) {
 				$("#hardwarecontent #username").hide();
 				$("#hardwarecontent #lblusername").hide();
 			}
-			else if ((text.indexOf("ICY") >= 0)||(text.indexOf("Toon") >= 0)||(text.indexOf("PVOutput") >= 0))
+			else if ((text.indexOf("ICY") >= 0)||(text.indexOf("Toon") >= 0)||(text.indexOf("Nest Th") >= 0)||(text.indexOf("PVOutput") >= 0))
 			{
 				$("#hardwarecontent #divserial").hide();
 				$("#hardwarecontent #divremote").hide();
