@@ -113,6 +113,7 @@ Version 2.0.xxxx (xxxx 2015)
 - Fixed: Possible bug that could delete an incorrect shortlog data point (option in graph, shift-click to delete)
 - Implemented: OTGW, CH_Enable/DHW_Enable are now switchable (Thanks to Rob K)
 - Implemented: OTGW, support for GPIO A/B switches(Thanks to Rob K)
+- Implemented: 'Nest Thermostat' hardware support
 
 Version 2.0.2284 (February 22th 2015)
 - Fixed: Firefox, RGBW/Setpoint popup
